# terragrunt-module-minikube

./: .env.dev  .gitignore  .pre-commit-config.yaml  .tflint.hcl  LICENSE  README.md  kustomization.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 2-BUG-REPORT.yaml
charts/app-of-apps/: values.yaml
charts/app-of-apps/applications/: argocd.yaml  cert-manager.yaml  istio-base.yaml  istio-ingress.yaml  istiod.yaml  keycloak.yaml  kiali-operator.yaml  kube-prometheus-stack.yaml  loki-distributed.yaml  mongodb-kubernetes-operator.yaml  mysql-operator.yaml  oauth2-proxy.yaml  promtail.yaml  rook-ceph-operator.yaml  strimzi-kafka-operator.yaml  tempo-distributed.yaml
charts/app-of-apps/templates/applications/: argocd.yaml
k12s/: kustomization.yaml
k12s/app-of-apps/base/: app-of-apps.yaml
k12s/app-of-apps/overlays/default/: app-of-apps.yaml
k12s/charts/istiod-1.18.0/istiod/templates/: _helpers.tpl
k12s/charts/keycloakx-2.3.0/keycloakx/templates/: hpa.yaml
k12s/charts/strimzi-kafka-operator-0.35.1/strimzi-kafka-operator/templates/: _kafka_image_map.tpl
k12s/knative-eventing/overlays/default/: kustomization.yaml
k12s/knative-operator/base/: kustomization.yaml
k12s/knative-serving/base/: kustomization.yaml
k12s/knative-serving/overlays/default/: config-certmanager.yaml  knative-serving.yaml
live/: terragrunt.hcl
live/_common/: minikube.hcl
live/_envcommon/: minikube.hcl
live/dev/cluster/: .terraform.lock.hcl  terragrunt.hcl
live/minikube/local/dev/default/: profile.hcl
(+13 files in other folders)
